Update fixed header previous win numbers width, now it looks correctly changed backgrounds now we can pick chip and stand on cell, visual perfomance added average section, now can see how many chip betted fixed chips standing overflow

--- a/src/app/roulette/roulette-bet/roulette-bet.component.scss
+++ b/src/app/roulette/roulette-bet/roulette-bet.component.scss
@@ -46,6 +46,22 @@
   }
 }
 
+.bet__selected {
+  width: 50px;
+  height: 50px;
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  z-index: 3;
+  pointer-events: none;
+}
+
 .bets__button {
   position: relative;
   display: inline-block;
@@ -93,6 +109,14 @@
     color: transparent;
   }
 }
+
+.average {
+  margin: 50px;
+  font-size: 2rem;
+  color: #fff;
+  min-width: 100px;
+}
+
 @-webkit-keyframes pulsate {
   50% {
     color: #fff;
