--- a/src/app/roulette/roulette-header/roulette-header.component.scss
+++ b/src/app/roulette/roulette-header/roulette-header.component.scss
@@ -35,13 +35,15 @@
     width: 500px;
     height: 60px;
 
+    overflow: hidden;
+
     li {
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100%;
       width: 40px;
-      overflow: hidden;
+      min-width: 40px;
 
       margin: 1px;
 
