--- a/src/app/roulette/roulette.component.scss
+++ b/src/app/roulette/roulette.component.scss
@@ -9,7 +9,12 @@
 
   border-radius: 3rem;
 
-  background-color: #00763a;
+  background: rgb(13, 103, 41);
+  background: radial-gradient(
+    circle,
+    rgba(13, 103, 41, 1) 60%,
+    rgba(6, 45, 3, 1) 100%
+  );
 
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 
